After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 712827 - Fix compilation with g_memmove() deprecation
Fix compilation with g_memmove() deprecation
Status: RESOLVED FIXED
Product: libgsf
Classification: Core
Component: General
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Jody Goldberg
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2013-11-21 16:14 UTC by Lionel Landwerlin
Modified: 2013-12-02 11:59 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
output-iconv: fix compilation by replacing g_memmove() by memmove() (816 bytes, patch)
2013-11-21 16:15 UTC, Lionel Landwerlin
committed Details | Review

Description Lionel Landwerlin 2013-11-21 16:14:43 UTC
Quick fix for the deprecation.
Comment 1 Lionel Landwerlin 2013-11-21 16:15:31 UTC
Created attachment 260462 [details] [review]
output-iconv: fix compilation by replacing g_memmove() by memmove()
Comment 2 Matthias Clasen 2013-12-02 11:59:38 UTC
I'm pushing this to fix the build in jhbuild
Comment 3 Matthias Clasen 2013-12-02 11:59:47 UTC
Attachment 260462 [details] pushed as 54bc048 - output-iconv: fix compilation by replacing g_memmove() by memmove()