output-iconv: fix compilation by replacing g_memmove() by memmove()

https://bugzilla.gnome.org/show_bug.cgi?id=712827